k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relay
  labels:
    app: relay
    version: v1
    env: production
    kind: web
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8081'
spec:
  selector:
    matchLabels:
      app: relay
      version: v1
      env: production
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: relay
        version: v1
        env: production
        kind: web
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: relay
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 3000
            capabilities:
              drop: ["ALL"]
          image: 'us-west1-docker.pkg.dev/sre-artifacts/sre/relay:1aaae6e7a76e3df46c6e5b4b075515f5d4f4e7e8'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2025
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "24Mi"
            limits:
              cpu: "20m"
              memory: "48Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            failureThreshold: 30
            periodSeconds: 10
