k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: relay
    version: v1
    env: production
    kind: web
  name: relay
spec:
  selector:
    app: relay
  ports:
    - protocol: TCP
      port: 2025
      targetPort: 2025
