k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: relay
  name: relay
spec:
  podSelector:
    matchLabels:
      app: relay
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: policy-reporter
      ports:
      - port: 2025
        protocol: TCP
